# cpp_notes

./: .gitignore  README.md  Tutorial_Ideas.md  VideoPlaylist.md  rename.sh
001_hello_world/: HelloWorld.x  build.sh
002_arguments/: CMakeLists.txt  build.sh
002_arguments/src/: CMakeLists.txt  main.cpp
002_data_types/: DataTypes.cpp  DataTypes.x  build.sh
003_data_types/: build.sh  main.cpp
003_references/: build.sh
003_strings/: Strings.cpp  build.sh  main.cpp
004_Vec3_struct/: CMakeLists.txt  build.sh
004_Vec3_struct/src/: CMakeLists.txt
004_Vec3_struct/src/lib/Maths/: Vec3.hpp
004_Vec3_struct/src_tests/: CMakeLists.txt
004_arguments/: Arguments.cpp  Arguments.x  build.sh
004_vectors/: Vectors.x  main.cpp
005_references/: Vectors.x
005_vector/: Vector.cpp  build.sh
005_vectors/: Vectors.cpp  Vectors.x  build.sh
006_functions_introduction/: FunctionsIntroduction.x  build.sh
006_loops/: Loops.x
006_references/: build.sh  main.cpp
006_vector_reserve/: VectorReserve.cpp  VectorReserve.x  build.sh
007_enumerations/: Enumerations.cpp  build.sh
007_list/: List.cpp  List.x  build.sh
007_loops/: build.sh
008_functions_introduction/: FunctionsIntroduction.cpp  build.sh
008_functions_with_vectors/: FunctionsWithVectors.x  Strings.x  build.sh
008_if_statement/: If.x  main.cpp
008_pointers/: build.sh
009_Macros/: build.sh
009_case_select/: If.x  build.sh  main.cpp
009_enumerations/: Enumerations.x  build.sh
009_static_cast/: StaticCast.cpp  StaticCast.x  build.sh
010_functions_with_vectors/: FunctionsWithVectors.cpp  build.sh
010_references/: References.cpp  References.x  build.sh
010_ternary/: build.sh  main.cpp
011_const_references/: ConstReferences.cpp  build.sh
011_lambda/: main.cpp
011_static_cast/: StaticCast.cpp  build.sh
011_ternary/: Ternary.x
012_references/: build.sh
012_scope/: build.sh
012_variant/: Vectors.x  main.cpp
013_const_references/: ConstReferences.x  build.sh
013_loops/: Loops.cpp  Loops.x  main.cpp
014_scope/: Scope.cpp  build.sh
015_loops/: build.sh
016_pointers/: CMakeLists.txt
016_pointers/src/: CMakeLists.txt
018_lambda/: Arguments.x
019_templates/: build.sh  class_template_animal.hpp  class_template_box.hpp
019_ternary/: Ternary.x  main.cpp
020_lambda/: build.sh
021_auto_type_deduction/: AutoTypeDeduction.cpp
021_pair/: Pair.cpp  Pair.x  build.sh
021_templates/: function_template.hpp
021_variant/: build.sh
022_auto_type_deduction/: AutoTypeDeduction.cpp  AutoTypeDeduction.x  build.sh
022_stl_algorithms/: main.cpp  part_1.hpp
024_auto_type_deduction/: AutoTypeDeduction.cpp  AutoTypeDeduction.x  build.sh
025_class_helper_macros/: CMakeLists.txt
025_classes/: CMakeLists.txt  build.sh
026_macros/: build.sh
028_macros/: main.cpp
028_stl_algorithms/: build.sh  part_4.hpp
028_templates/: main.cpp
029_templates/: multiply_template.hpp
030_constexpr/: ConstExpr.cpp
030_openmp/: build.sh
031_constexpr/: ConstExpr.cpp  ConstExpr.x  build.sh
031_templates/: Templates.x  class_template_animal.hpp
032_constructor_rule_of_five/: ConstructorRuleOfFive.cpp  ConstructorRuleOfFive.x  build.sh
032_contiguous_vectors/: build.sh
033_contiguous_vectors/: ContiguousVectors.x
033_emplace_push/: EmplacePush.cpp  EmplacePush.x  emplace_push.code-workspace
034_emplace_push/: EmplacePush.x  build.sh
035_contiguous_vectors/: ContiguousVectors.cpp
039_queue/: build.sh  main.x
040_noexcept/: Noexcept.x
040_queue/: main.cpp  output_4.csv
041_noexcept/: Noexcept.cpp  build.sh
041_regex/: Regex.cpp
042_bitwise/: Bitwise.cpp  build.sh
042_regex/: Regex.x  build.sh
043_bitwise/: Bitwise.x
044_hash_table/: CustomHashTable.hpp  HashTable.cpp  HashTable.x  build.sh
100_stl_algorithms/: Variant.x  Zebra.hpp
101_stl_lower_bound/: build.sh
101_stl_sort/: build.sh  stl_sort.cpp
102_stl_lower_bound/: lower_bound.x  stl_lower_bound.cpp
102_stl_upper_bound/: stl_upper_bound.cpp
103_stl_upper_bound/: build.sh  upper_bound.x
104_stl_binary_search/: build.sh  stl_binary_search.cpp  stl_binary_search.x
301_pybind/: LinAlg.hpp  bindings.cpp  build.sh  pyproject.toml  setup.py  use_maths.py
502_sycl_pybind/: CMakeLists.txt  README.md  bindings.cpp  build_gpu.sh  dgemm.hpp  run_gpu.sh  sycl_pybind.code-workspace  use_maths.py
502_sycl_pybind/rm/: pyproject.toml  sycl.cpp
903_simple_md_sycl/src/: CMakeLists.txt
903_simple_md_sycl/src/lib/SimpleMD/: ConfigurationEngine.hpp
904_security/001_port_scanner/src/: CMakeLists.txt  main.cpp
(+106 files in other folders)
